# disknext

./: .dockerignore  .env.example  .gitignore  .gitmodules  .xml  AGENTS.md  CLAUDE.md  Dockerfile  PLAN.md  README.md  ROADMAP.md  clean.py  docker-compose.dev.yml  env.md  license_public.pem  main.py  pyproject.toml  pyrightconfig.json  run_integration_tests.bat  run_integration_tests.sh  run_tests.py  setup_cython.py  tmpclaude-c1f9-cwd
.claude/: settings.local.json
.gitea/workflows/: test.yml
.githooks/: commit-msg  pre-commit
.github/: copilot-instructions.md
.github/workflows/: test.yml
.run/: 开发模式.run.xml
docs/: CLA.md  file-viewer-api.md  roadmap.md  text-editor-api.md
middleware/: auth.py  dependencies.py  scope.py
migrations/: 002_metadata_kv_redesign.sql
models/: README.md  __init__.py  color.py  database.py  download.py  group.py  migration.py  model_base.py  node.py  object.py  order.py  physical_file.py  policy.py  redeem.py  report.py  response.py  setting.py  share.py  source_link.py  storage_pack.py  tag.py  task.py  user.py  user_authn.py  webdav.py
models/base/: README.md  __init__.py  sqlmodel_base.py  table_base.py
models/mixin/: README.md  __init__.py  info_response.py  (+2 more)
pkg/: __init__.py
routers/: __init__.py
service/: __init__.py  env.md  webauthn.py
sqlmodels/: README.md  __init__.py  auth_identity.py  color.py  custom_property.py  database.py  database_connection.py  download.py  file.py  file_app.py  file_metadata.py  group.py  mail_template.py  migration.py  model_base.py  node.py  object.py  object_metadata.py  order.py  physical_file.py  policy.py  product.py  redeem.py  report.py  scope.py  server_config.py  setting.py  share.py  source_link.py  storage_pack.py  tag.py  task.py  theme_preset.py  token.py  triggers.py  uri.py  user.py  user_authn.py  webdav.py  wopi.py
tests/: IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  TESTING_GUIDE.md  benchmark_file_crud.py  check_imports.py  conftest.py  example_test.py  test_database.py  test_db_group.py  test_db_settings.py  test_db_user.py  test_main.py  test_pkg_password.py
utils/: __init__.py  aiohttp_session.py  ssrf_resolver.py
(+174 files in other folders)
